--- a/source/stylesheets/blocks/showcase.sass
+++ b/source/stylesheets/blocks/showcase.sass
@@ -22,6 +22,10 @@
   .showcase__item
     width: (100% / 3)
 
+@media screen and (min-width: 1600px)
+  .showcase__item
+    width: (100% / 4)
+
 @media screen and (min-width: 900px)
   .showcase
     padding: 40px 0 10px
